2009-06-10  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-entry.c (hildon_entry_class_init): Make HildonEntry:size
	a G_PARAM_CONSTRUCT property, to allow the default size to be set.

	Fixes: NB#117931 (Theming issues in accounts dialogs)

2009-06-09  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c,
	(hildon_pannable_area_button_release_cb): Changed the coordinates
	of the original release in case we want to discard the release,
	some widgets in Fremantle do not handle the leave-notify.

2009-06-09  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c,
	(hildon_pannable_area_button_release_cb): Reviewed the logic of
	the release using the last refactored functions and avoiding the
	movement if an element was selected.

2009-06-09  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c,
	(hildon_pannable_area_check_move),
	(hildon_pannable_area_handle_move),
	(hildon_pannable_area_motion_notify_cb): Refactored the
	motion_notify method using a couple of new functions.

2009-06-09  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-date-selector.c:
	(hildon_date_selector_construct_ui):
	* hildon/hildon-time-selector.c:
	(hildon_time_selector_constructor):
	* hildon/hildon-touch-selector-entry.c:
	(hildon_touch_selector_entry_set_text_column),
	(hildon_touch_selector_entry_get_text_column):
	* hildon/hildon-touch-selector.c: (_default_print_func),
	(hildon_touch_selector_new_text): Use
	hildon_touch_selector_set/get_text_column() instead of
	setting/getting the "text-column" property.

2009-06-09  Claudio Saavedra  <csaavedra@igalia.com>

	* doc/hildon-sections.txt: Add the new public methods below.

	* examples/hildon-picker-button-multicolumn-example.c:
	(create_touch_selector):
	* examples/hildon-touch-selector-example.c: (create_selector):
	* examples/hildon-touch-selector-multi-cells-example.c:
	(create_selector):
	Use hildon_touch_selector_column_set_text_column()
